--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -114,4 +114,35 @@ footer {
     font-size: 13px;
     font-weight: bold;
   }
+
+  /* Users edit */
+
+  .gravatar_edit {
+    margin: 15px auto;
+    text-align: center;
+    .gravatar {
+      float: none;
+      max-width: 100px;
+    }
+  }
+
+  /* Users index */
+
+  .users {
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+    li {
+      overflow: auto;
+      padding: 10px 0;
+      border-bottom: 1px solid $gray-lighter;
+    }
+  }
+  .delete-btn {
+    float: right;
+    position: relative;
+    right: 0;
+  }
+
+
 }
